Addition of cards section to SQL Basics

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -8,6 +8,7 @@ tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
+import DocCardList from '@theme/DocCardList';
 
 <LeadText content='SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough.' />
 
@@ -52,3 +53,6 @@ A [Query Studio](https://appexchange.salesforce.com/appxListingDetail?listingId=
 
 Learn more on [sfmarketing.cloud](https://sfmarketing.cloud/2019/08/05/query-studio-for-marketing-cloud/).
 
+## All SQL Guides
+
+<DocCardList />
