Small content additions based on feedback

--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -1218,7 +1218,7 @@ Mobile | Mobile number for the subscriber | Phone |
 MessageID | Unique Mobile Message ID | Number |
 KeywordID | Unique identifier for the keyword (GUID) | Text | X |
 CodeID | Unique identifier for the SMS code (GUID) | Text | X |
-ConversationID | Unique identifier for the SMS conversation | Text | X |
+ConversationID | Unique identifier for the SMS conversation. Currently always null. | Text | X |
 CampaignID | The SMS campaign tied to the record | Number | X |
 Sent | If the message was sent | Boolean |
 Delivered | If the message was delivered | Boolean | X |
