--- a/docs/usecase/sfmc-contact-deletion.mdx
+++ b/docs/usecase/sfmc-contact-deletion.mdx
@@ -138,7 +138,7 @@ Previous methods are nice, but they require manual triggering in the Salesforce 
 Thankfully, SFMC offers a solution for that as well with REST API. To implement it:
 
 1. Create authentication endpoint with correct permissions with Installed Package
-    1. Go to Setup.
+    1. Go to Setup in Parent Business Unit.
     2. Within the Platform Tools section, roll out Apps and click Installed Packages.
     3. Click New in the top right.
     4. Provide a meaningful name and description for your Installed Package.
